# zentropy_scout

./: .env.example  .gitignore  .pre-commit-config.yaml  .trivyignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  env_setup.md  sonar-project.properties  zentropy_scout_prd.md
backend/: pyproject.toml  pyrightconfig.json
backend/app/: main.py
backend/app/adapters/: __init__.py
backend/app/adapters/sources/: __init__.py  adzuna.py  base.py  remoteok.py  themuse.py  usajobs.py
backend/app/agents/: __init__.py  base.py  chat.py  checkpoint.py  ghostwriter.py  ghostwriter_graph.py  ghostwriter_prompts.py  onboarding.py  scouter.py  scouter_graph.py  state.py  strategist_graph.py  strategist_prompts.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  applications.py  auth.py  auth_magic_link.py  auth_oauth.py  base_resumes.py  chat.py  cover_letters.py  credits.py  files.py  job_postings.py  job_sources.py  job_variants.py  onboarding.py  persona_change_flags.py  personas.py  refresh.py  resume_templates.py  router.py  search_profiles.py  usage.py  user_source_preferences.py  webhooks.py
backend/app/core/: account_linking.py  auth.py  config.py  database.py  email.py  errors.py  file_validation.py  filtering.py  llm_sanitization.py  null_byte_middleware.py  oauth.py  oauth_client.py  pagination.py  rate_limiting.py  responses.py  stripe_client.py  tenant_session.py
backend/app/models/: __init__.py  account.py  admin_config.py  application.py  base.py  cover_letter.py  job_posting.py  job_source.py  persona.py  persona_content.py  persona_job.py  persona_settings.py  resume.py  resume_template.py  search_profile.py  session.py  stripe.py  usage.py  usage_reservation.py  user.py  verification_token.py
backend/app/prompts/: __init__.py  ghostwriter.py  resume_generation.py  strategist.py
backend/app/providers/: __init__.py  config.py  errors.py  factory.py  gemini_errors.py  metered_provider.py  retry.py
backend/app/providers/embedding/: __init__.py  base.py  gemini_adapter.py  mock_adapter.py  openai_adapter.py
backend/app/providers/llm/: __init__.py  base.py  claude_adapter.py  gemini_adapter.py  mock_adapter.py  openai_adapter.py
backend/app/repositories/: account_repository.py  credit_repository.py  job_pool_repository.py  job_posting_repository.py  persona_job_repository.py  resume_template_repository.py  search_profile_repository.py  stripe_repository.py  usage_repository.py  user_repository.py  verification_token_repository.py
backend/app/schemas/: __init__.py  admin.py  bulk.py  chat.py  credits.py  ingest.py  job_posting.py  prompt_params.py  resume.py  resume_template.py  search_profile.py  usage.py
backend/app/services/: __init__.py  admin_config_service.py  admin_management_service.py  agent_handoff.py  agent_message.py  application_workflow.py  base_resume_selection.py  batch_scoring.py  combined_interpretation.py  content_generation_service.py  content_security.py  content_utils.py  cover_letter_editing.py  cover_letter_generation.py  cover_letter_output.py  cover_letter_pdf_generation.py  cover_letter_pdf_storage.py  cover_letter_structure.py  cover_letter_validation.py  data_availability.py  discovery_workflow.py  duplicate_story.py  embedding_cache.py  embedding_cost.py  embedding_storage.py  embedding_types.py  experience_level.py  expiration_detection.py  explanation_generation.py  fit_score.py  generation_outcome.py  ghost_detection.py  global_dedup_service.py  golden_set.py  hard_skills_match.py  ingest_token_store.py  job_deduplication.py  job_embedding_generator.py  job_enrichment_service.py  job_expiry.py  (+39 more)
backend/app/services/admin/: __init__.py  admin_config_service.py  (+1 more)
backend/migrations/: env.py
backend/migrations/versions/: 000_enable_extensions.py  001_tier0_user_jobsource.py  002_tier1_persona.py  003_tier2_persona_children.py  004_tier3_deeper_fk.py  005_tier4_application.py  006_tier5_timeline_event.py  007_cleanup_functions.py  008_application_pin_archive.py  009_score_details_jsonb.py  010_auth_tables.py  011_rename_indexes.py  012_persona_jobs.py  013_backfill_persona_jobs.py  014_drop_per_user_columns.py  015_update_cleanup_functions.py  016_source_external_unique_index.py  017_quarantine_columns.py  018_verification_token_purpose.py  019_race_condition_indexes.py  020_token_metering.py  021_admin_pricing.py  022_usd_direct_billing.py  023_tiptap_schema.py  024_gemini_embedding_dimensions.py  025_stripe_checkout.py  026_signup_grant_unique_index.py  027_stripe_payment_intent_index.py  028_billing_hardening.py  029_settlement_retry.py  030_search_profiles.py  031_search_bucket_cursors.py  032_search_profile_routing.py
backend/scripts/: dedup_cross_persona.py  reembed_all.py
backend/tests/: conftest.py
backend/tests/fixtures/: golden_set.json
backend/tests/integration/: _reservation_helpers.py  test_admin_pricing_pipeline.py  test_config_key_rename.py  test_reservation_advanced.py  test_reservation_lifecycle.py  test_webhook_hardening.py
backend/tests/load/: locustfile.py
backend/tests/unit/: conftest.py  test_account_linking.py  test_account_repository.py  test_admin_api.py  test_admin_auth.py  test_admin_config_models.py  test_admin_config_service.py  test_admin_management_service.py  test_admin_routing_test.py  test_admin_schemas.py  test_agent_checkpoint.py  test_agent_client.py  test_agent_handoff.py  test_agent_message.py  test_agent_session_guard.py  test_agent_state.py  test_api_applications.py  test_api_auth.py  test_api_base_resumes.py  test_api_bulk_operations.py  test_api_chat.py  test_api_cover_letters.py  test_api_errors.py  test_api_files.py  test_api_filtering.py  test_api_job_postings_crud.py  test_api_job_postings_ingest.py  test_api_job_postings_router.py  test_api_job_variants.py  test_api_main.py  test_api_onboarding.py  test_api_pagination.py  test_api_persona_change_flags.py  test_api_personas_crud.py  test_api_personas_router.py  test_api_resources_router.py  test_api_responses.py  test_api_resume_templates.py  test_api_search_profiles.py  test_api_usage.py  (+201 more)
(+785 files in other folders)
