[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zentropy-scout"
version = "0.1.0"
description = "AI-powered job application assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-multipart>=0.0.9",  # File upload support

    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.2.4",

    # LLM Providers
    "anthropic>=0.18.0",
    "openai>=1.12.0",
    "google-genai>=1.0.0",

    # Agent Framework
    "langgraph>=0.0.40",
    "langgraph-checkpoint-postgres>=3.0.0",

    # PDF Generation & Extraction
    "reportlab>=4.1.0",
    "pdfplumber>=0.11.0",  # PDF text extraction for resume parsing (REQ-019 §6)
    "markdown-it-py>=4.0.0",  # Markdown → AST parsing for export (REQ-025 §5)

    # Document Export
    "python-docx>=1.0.0",  # DOCX generation for resume export (REQ-025 §5.3)

    # HTTP Client
    "httpx>=0.27.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",

    # Payments (REQ-029 §5.1)
    "stripe[async]>=14.0.0,<15.0.0",  # Stripe SDK with async (httpx) support

    # Security
    "python-magic>=0.4.27",  # File content validation via magic bytes
    "slowapi>=0.1.9",  # Rate limiting for API endpoints
    "PyJWT>=2.8.0",  # JWT encode/decode for authentication (REQ-013 §7.1)
    "bcrypt>=4.0.0",  # Password hashing with bcrypt (REQ-013 §10.8)
    "email-validator>=2.0.0",  # Email validation for pydantic EmailStr (REQ-013 §7.5)

    # Logging
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "hypothesis>=6.100.0",

    # Linting & Formatting
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pyright>=1.1.400",

    # Security Linting
    "bandit>=1.9.3",
    "pip-audit>=2.10.0",

    # Pre-commit hooks
    "pre-commit>=3.6.0",

    # Type Stubs
    "types-python-dateutil",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
addopts = "-m 'not slow' -n auto"
markers = [
    "slow: marks tests as slow (migration tests — deselect with -m 'not slow')",
    "xdist_group: group tests to run on the same xdist worker",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
# Skip B101 (assert_used) since we use asserts in tests
skips = ["B101"]
